add lin-or profile

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>人物介紹</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -26,8 +26,8 @@
                 <div class="card-deck">
                     <div class="card text-white bg-secondary mb-3">
                         <div class="card-body">
-                            <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
-                            <h3 class="card-title">林嘔啊</h3>
+                            <i class="fa fa-user-circle fa-5x" aria-hidden="true"><a href="./lin-or-profiles/index.html"></a></i>            
+                            <h3 class="card-title"><a href="./lin-or-profiles/index.html">林嘔啊</a></h3>
                             <p class="card-text">林嘔啊是一隻灰色的小狗</p>
                         </div>
                     </div>
@@ -35,7 +35,7 @@
                         <div class="card-body">
                             <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                             <h3 class="card-title">林狗渣</h3>
-                            <p class="card-text">林嘔啊是一隻黃色的小狗</p>
+                            <p class="card-text">林狗渣是一隻黃色的小狗</p>
                         </div>
                     </div>
                 </div>
