--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="index.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -24,36 +25,44 @@
         <div class="container">
             <div class="px-3">
                 <div class="card-deck">
-                    <div class="card text-white bg-secondary mb-3">
-                        <div class="card-body">
-                            <i class="fa fa-user-circle fa-5x" aria-hidden="true"><a href="./lin-or-profiles/index.html"></a></i>            
-                            <h3 class="card-title"><a href="./lin-or-profiles/index.html">林嘔啊</a></h3>
-                            <p class="card-text">林嘔啊是一隻灰色的小狗</p>
+                    <a href="./lin-or-profiles/index.html" class="custom-card">
+                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: flex;">
+                            <div class="card-body">
+                                <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
+                                <h3 class="card-title">林嘔啊</h3>
+                                <p class="card-text">林嘔啊是一隻灰色的小狗</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card text-white bg-secondary mb-3">
-                        <div class="card-body">
-                            <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
-                            <h3 class="card-title">林狗渣</h3>
-                            <p class="card-text">林狗渣是一隻黃色的小狗</p>
+                    </a>
+                    <a href="./lin-or-profiles/index.html" class="custom-card">
+                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: flex;">
+                            <div class="card-body">
+                                <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
+                                <h3 class="card-title">林狗渣</h3>
+                                <p class="card-text">林狗渣是一隻黃色的小狗</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="card-deck">
-                    <div class="card text-white bg-secondary mb-3">
-                        <div class="card-body">
-                            <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
-                            <h3 class="card-title">王汪汪</h3>
-                            <p class="card-text">王汪汪是一隻白色的小狗</p>
+                    <a href="./lin-or-profiles/index.html" class="custom-card">
+                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: inline-block">
+                            <div class="card-body">
+                                <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
+                                <h3 class="card-title">王汪汪</h3>
+                                <p class="card-text">王汪汪是一隻白色的小狗</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card text-white bg-secondary mb-3">
-                        <div class="card-body">
-                            <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
-                            <h3 class="card-title">湯狗巴</h3>
-                            <p class="card-text">湯狗巴是一隻花色的小狗</p>
+                    </a>
+                    <a href="./lin-or-profiles/index.html" class="custom-card">
+                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: inline-block">
+                            <div class="card-body">
+                                <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
+                                <h3 class="card-title">湯狗巴</h3>
+                                <p class="card-text">湯狗巴是一隻花色的小狗</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
