remove some text from breadcrumb

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-		<div class="container mt-4 mb-6">                
+		<div class="container">                
                     <ol class="breadcrumb bg-warning text-white">
             			<li class="breadcrumb-item">汪汪汪</li>
             			<li class="breadcrumb-item active">乂煞氣a豬豬乂</li>
                         <li class="breadcrumb-item"><a href="#">黑貓</a></li>
                         <li class="breadcrumb-item">北極熊</li>
-                        <li class="breadcrumb-item">林嘔啊</li>
-                        <li class="breadcrumb-item">林狗渣</li>
         			</ol>
             </div>    
         <div class="container">
