--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-		<div class="container">                
+		<div class="container mt-4 mb-6">                
                     <ol class="breadcrumb bg-warning text-white">
             			<li class="breadcrumb-item">汪汪汪</li>
             			<li class="breadcrumb-item active">乂煞氣a豬豬乂</li>
