--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-		<div class="container mt-4 mb-6">                
+		<div class="container  mt-4 mb-6">                
                     <ol class="breadcrumb bg-warning text-white">
             			<li class="breadcrumb-item">汪汪汪</li>
             			<li class="breadcrumb-item active">乂煞氣a豬豬乂</li>
@@ -20,11 +20,11 @@
                         <li class="breadcrumb-item">北極熊</li>
         			</ol>
             </div>    
-        <div class="container">
+        <div class="container-sm">
             <div class="px-3">
                 <div class="card-deck">
                     <a href="./lin-or-profiles/index.html" class="custom-card">
-                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: flex;">
+                        <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: flex;">
                             <div class="card-body">
                                 <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                                 <h3 class="card-title">林嘔啊</h3>
@@ -33,7 +33,7 @@
                         </div>
                     </a>
                     <a href="./lin-or-profiles/index.html" class="custom-card">
-                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: flex;">
+                        <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: flex;">
                             <div class="card-body">
                                 <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                                 <h3 class="card-title">林狗渣</h3>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="card-deck">
                     <a href="./lin-or-profiles/index.html" class="custom-card">
-                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: inline-block">
+                        <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: inline-block">
                             <div class="card-body">
                                 <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                                 <h3 class="card-title">王汪汪</h3>
@@ -53,7 +53,7 @@
                         </div>
                     </a>
                     <a href="./lin-or-profiles/index.html" class="custom-card">
-                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: inline-block">
+                        <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: inline-block">
                             <div class="card-body">
                                 <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                                 <h3 class="card-title">湯狗巴</h3>
