--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="px-3">
                 <div class="card-deck">
                     <a href="./lin-or-profiles/index.html" class="custom-card">
-                        <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: flex;">
+                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: flex;">
                             <div class="card-body">
                                 <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                                 <h3 class="card-title">林嘔啊</h3>
@@ -32,8 +32,8 @@
                             </div>
                         </div>
                     </a>
-                    <a href="./lin-or-profiles/index.html" class="custom-card">
-                        <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: flex;">
+                    <a href="./lin-gouzha-profiles/index.html" class="custom-card">
+                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: flex;">
                             <div class="card-body">
                                 <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                                 <h3 class="card-title">林狗渣</h3>
@@ -43,8 +43,8 @@
                     </a>
                 </div>
                 <div class="card-deck">
-                    <a href="./lin-or-profiles/index.html" class="custom-card">
-                        <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: inline-block">
+                    <a href="./wang-wangwang-profile/index.html" class="custom-card">
+                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: inline-block">
                             <div class="card-body">
                                 <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                                 <h3 class="card-title">王汪汪</h3>
@@ -52,8 +52,8 @@
                             </div>
                         </div>
                     </a>
-                    <a href="./lin-or-profiles/index.html" class="custom-card">
-                        <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: inline-block">
+                    <a href="./tang-gouba-profile/index.html" class="custom-card">
+                        <div class="card text-white bg-secondary mb-3" style="width: 30rem; display: inline-block">
                             <div class="card-body">
                                 <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                                 <h3 class="card-title">湯狗巴</h3>
