--- a/index.html
+++ b/index.html
@@ -6,20 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="index.css" />
+  <link rel="stylesheet" type="text/css" href="index.css" />  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-		<div class="container  mt-4 mb-6">                
-                    <ol class="breadcrumb bg-warning text-white">
-            			<li class="breadcrumb-item">汪汪汪</li>
-            			<li class="breadcrumb-item active">乂煞氣a豬豬乂</li>
-                        <li class="breadcrumb-item"><a href="#">黑貓</a></li>
-                        <li class="breadcrumb-item">北極熊</li>
-        			</ol>
-            </div>    
+		<div class="container mt-4 mb-6">
+            <div class="container-custom">
+                <nav class="navbar navbar-inverse navbar-dark bg-secondary">
+                    <div class="container-fluid">            
+                        <div class="navbar-header">
+                            <a class="navbar-brand">乂煞氣a豬豬乂</a>
+                        </div>            
+                        <div>
+                            <ul class="nav navbar-nav">
+                                <li><a href="#"><i class="fa fa-user-plus fa-2x" aria-hidden="true"></i></a></li>&nbsp;
+                                <li><a href="#"><i class="fa fa-star-o fa-2x" aria-hidden="true"></i></a></li>&nbsp;
+                                <li><a href="#"><i class="fa fa-camera fa-2x" aria-hidden="true"></i></a></li>&nbsp;&nbsp;
+                                <li><a href="#"><i class="fa fa-commenting fa-2x" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>               
         <div class="container-sm">
             <div class="px-3">
                 <div class="card-deck">
