--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-		<div class="container mt-4 mb-6">
+		<div class="container">
             <div class="container-custom">
                 <nav class="navbar navbar-inverse navbar-dark bg-secondary">
                     <div class="container-fluid">            
