--- a/leave-msg/index.html
+++ b/leave-msg/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="container" style="position: absolute; top: 50%; left: 50%;" >
+    <div class="container">
         <div class="card">
             <div class="card-body">                
                 <div id="display"></div>
