modify block moving pace

--- a/leave-msg/index.html
+++ b/leave-msg/index.html
@@ -20,7 +20,7 @@
             // randTime = Math.floor(Math.random() * 10 + 10);
             //var interval=setInterval(function(){move(cxt);},randTime);
             (function loop() {
-                var randTime = Math.floor(Math.random() * 100);
+                var randTime = Math.floor(Math.random() * 100 + 5);
                 // var rand = Math.round(Math.random() * (3000 - 500)) + 500;
                     setTimeout(function() {
                     move(cxt);
