add border-background under slideshow at lin-or page

--- a/lin-or-profiles/index.html
+++ b/lin-or-profiles/index.html
@@ -17,13 +17,22 @@
             <h3 class="card-title"><a href="#">林嘔啊</a></h3> -->
             <div id="slideshow">
                 <div>
-                    <img src="pics/349324.jpg" style="border-radius: 8px; border: 50%; width: 100%; height: auto;">
+                    <img src="pics/349324.jpg" style="border-radius: 8px; border: 50%; width: 100%; height: auto;  
+                    border: 10px solid transparent;
+                    padding: 15px;
+                    border-image: url(pics/backround.png) 30 round;">
                 </div>
                 <div>
-                    <img src="pics/349327.jpg" style="border-radius: 8px; border: 50%; width: 100%; height: auto;">
+                    <img src="pics/349327.jpg" style="border-radius: 8px; border: 50%; width: 100%; height: auto;
+                    border: 10px solid transparent;
+                    padding: 15px;
+                    border-image: url(pics/backround.png) 30 round;">
                 </div>
                 <div>
-                    <img src="pics/349328.jpg" style="border-radius: 8px; border: 50%; width: 100%; height: auto;">
+                    <img src="pics/349328.jpg" style="border-radius: 8px; border: 50%; width: 100%; height: auto;
+                    border: 10px solid transparent;
+                    padding: 15px;
+                    border-image: url(pics/backround.png) 30 round;">
                 </div>
               </div>        
             </div>
