--- a/lin-or-profiles/index.html
+++ b/lin-or-profiles/index.html
@@ -12,6 +12,29 @@
 </head>
 <body>
     <div class="container">
+        <div class="pos-f-t">
+            <nav class="navbar navbar-dark bg-dark">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </button>
+            </nav>
+            <div class="collapse width position-fixed" id="navbarToggleExternalContent">
+              <div class="bg-dark p-4">
+                <h4 class="text-white">乂HTML5練習乂</h4>
+                <span class="text-muted">我正在練習Javascript</span>
+              </div>              
+              <div class="bg-dark p-4">
+                <h4 class="text-white">乂bootstrap練習乂</h4>
+                <span class="text-muted">我正在練習bootstrap</span>
+              </div>
+              <div class="bg-dark p-4">
+                <h4 class="text-white">乂角色介紹乂</h4>
+                <span class="text-muted">奇形怪狀，頭角崢嶸</span>
+              </div>
+            </div>
+            <div class="bg-info p-4"></div>
+          </div>
+          
         <div class="card-body">
             <!-- <i class="fa fa-user-circle fa-5x" aria-hidden="true"><a href="#"></a></i>            
             <h3 class="card-title"><a href="#">林嘔啊</a></h3> -->
