modify profile to real person on lin-or

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <canvas id="canvas"></canvas>
         <div id="overlay">
         <div class="container-custom">
-            <nav class="navbar navbar-inverse navbar-dark bg-secondary">
+            <nav class="navbar navbar-inverse navbar-dark bg-info">
                 <div class="container-fluid">            
                     <div class="navbar-header">
-                        <a class="navbar-brand">乂煞氣a豬豬乂</a>
+                        <a class="navbar-brand">&#129505;&#129505;我的朋朋都很漂亮&#129505;&#129505;</a>
                     </div>            
                     <div>
                         <ul class="nav navbar-nav">
@@ -37,19 +37,22 @@
         <div class="px-3">
             <div class="card-deck">
                 <a href="./lin-or-profiles/index.html" class="custom-card">
-                    <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: flex;">
+                    <div class="card text-white bg-info mb-3" style="width: 20rem; display: flex;">
                         <div class="card-body">
-                            <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
-                            <h3 class="card-title">林嘔啊</h3>
-                            <p class="card-text">林嘔啊是一隻灰色的小狗</p>
+                            <!-- <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>             -->
+                            <img src="pics/eileen_thumbnail.jpg" alt="Avatar">
+                            <h3 class="card-title">乂Eileen乂</h3>
+                            <span class="angle-right-icon"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
+                            <p class="card-text">Eileen是個電眼美女<i class="fa fa-heart" aria-hidden="true"></i></p>                                                        
                         </div>
                     </div>
                 </a>
                 <a href="./lin-gouzha-profiles/index.html" class="custom-card">
-                    <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: flex;">
+                    <div class="card text-white bg-info mb-3" style="width: 20rem; display: flex;">
                         <div class="card-body">
                             <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                             <h3 class="card-title">林狗渣</h3>
+                            <span class="angle-right-icon"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
                             <p class="card-text">林狗渣是一隻黃色的小狗</p>
                         </div>
                     </div>
@@ -57,19 +60,21 @@
             </div>
             <div class="card-deck">
                 <a href="./wang-wangwang-profile/index.html" class="custom-card">
-                    <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: inline-block">
+                    <div class="card text-white bg-info mb-3" style="width: 20rem; display: inline-block">
                         <div class="card-body">
                             <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                             <h3 class="card-title">王汪汪</h3>
+                            <span class="angle-right-icon"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
                             <p class="card-text">王汪汪是一隻白色的小狗</p>
                         </div>
                     </div>
                 </a>
                 <a href="./tang-gouba-profile/index.html" class="custom-card">
-                    <div class="card text-white bg-secondary mb-3" style="width: 20rem; display: inline-block">
+                    <div class="card text-white bg-info mb-3" style="width: 20rem; display: inline-block">
                         <div class="card-body">
                             <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
                             <h3 class="card-title">湯狗巴</h3>
+                            <span class="angle-right-icon"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
                             <p class="card-text">湯狗巴是一隻花色的小狗</p>
                         </div>
                     </div>
