modify profile to real person on lin-gouzha

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="card text-white bg-info mb-3" style="width: 20rem; display: flex;">
                         <div class="card-body">
                             <!-- <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>             -->
-                            <img src="pics/eileen_thumbnail.jpg" alt="Avatar">
+                            <img src="pics/eileen_thumbnail.jpg" alt="Eileen">
                             <h3 class="card-title">乂Eileen乂</h3>
                             <span class="angle-right-icon"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
                             <p class="card-text">Eileen是個電眼美女<i class="fa fa-heart" aria-hidden="true"></i></p>                                                        
@@ -50,10 +50,11 @@
                 <a href="./lin-gouzha-profiles/index.html" class="custom-card">
                     <div class="card text-white bg-info mb-3" style="width: 20rem; display: flex;">
                         <div class="card-body">
-                            <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
-                            <h3 class="card-title">林狗渣</h3>
+                            <!-- <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>             -->
+                            <img src="pics/agnes_thumbnail.jpg" alt="Agnes">
+                            <h3 class="card-title">乂宇棠乂</h3>
                             <span class="angle-right-icon"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-                            <p class="card-text">林狗渣是一隻黃色的小狗</p>
+                            <p class="card-text">&#127932;音樂仙女宇棠&#127929;</p>
                         </div>
                     </div>
                 </a>
