--- a/lin-gouzha-profiles/index.html
+++ b/lin-gouzha-profiles/index.html
@@ -231,7 +231,7 @@
   <p>宇棠目前就讀於國立台南藝術大學音樂系大四&gt;///&#060;</p>
   <p>主修打擊樂</p>
   <p>是乂煞氣a豬豬乂的表妹&gt;///&#060;</p>
-  <p>(之前)喜歡打傳說~~還滿猛的</p>
+  <p>喜歡打傳說~~還滿猛的</p>
   <p>id有機會的話我再問她XDD</p>
 </div>
 <div>
