--- a/lin-or-profiles/index.html
+++ b/lin-or-profiles/index.html
@@ -19,21 +19,32 @@
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="pics/eileen1.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="pics/eileen1.jpg" alt="Eileen" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="pics/eileen2.jpg" alt="Chicago" style="width:100%;">
+        <img src="pics/eileen2.jpg" alt="Eileen" style="width:100%;">
       </div>
     
       <div class="item">
-        <img src="pics/eileen3.jpg" alt="New york" style="width:100%;">
+        <img src="pics/eileen3.jpg" alt="Eileen" style="width:100%;">
       </div>
+ 
+      <div class="item">
+        <img src="pics/eileen4.jpg" alt="Eileen" style="width:100%;">
+      </div>
+ 
+      <div class="item">
+        <img src="pics/eileen5.jpg" alt="Eileen" style="width:100%;">
+      </div>
+ 
     </div>
 
     <!-- Left and right controls -->
