--- a/lin-or-profiles/index.html
+++ b/lin-or-profiles/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -58,10 +59,24 @@
     </a>
     
   </div>
-  
-  <p>Eileen從小就喜歡韓劇，耳濡目染之下變得很會演戲&gt;///&#060;</p>
-  <p>熱愛韓國文化~~</p>
-  <p>跟乂煞氣a豬豬乂已經認識17年了&gt;///&#060;</p>
+    <p>乂角色設定乂</p>
+    <p>從小就是個不受歡迎的孩子，聽長輩們說我是睜開眼就要哭的孩子，因此我成了不乖的小孩。</p>
+    <p>但人各有命，我雖然不受歡迎但因天生樂觀，又長的有些許可愛，所以我還是認為自己是幸福的。</p>
+    <hr/>
+    <p>父親是荷蘭混血的陳水扁，母親是泰國黃阿貞，哥哥是新加坡林俊傑，而我是屏東楊承林，從小就幻想自己是演員。</p>
+    <p>起因是幼稚園時期天天跟著外婆看還珠格格，一直以為長大後我就是劇裡的小燕子或紫微，最重要的學習階段我就這麼學習了戲劇表演。</p>
+    <p>隨著年紀的增加我也逐漸甦醒我不是戲裡的演員，而是需要好好加強學習的末班車學生。</p>
+    <p>但學習哪是自立自主的，在小時候沒大人管，也被禁足的情況下，我也只好被眼前的電視機所吸引，而又成了電視兒童，</p>
+    <p>所以若要問我興趣是什麼，那大概就是看電視了吧！常常將電視情節與現實搞混的我又再次開始了戲劇表演的輪迴。</p>
+    <p>韓劇是那時盛行的戲劇，韓劇也成了我的童年，也是我覺得除了台灣我待最久的國家。</p>
+    <hr/>
+    <p>但終究演員還是需要靠點夢想才會實現，小時候的我幻想自己是演員，而非夢想，</p>
+    <p>也因此現在的我還是個普通的上班族，接管了父母犧牲陪伴孩子的時光而存在的公司，</p>
+    <p>但小時候付出時間的戲劇表演並非對我無影響，現在的我表達時常常被誇說太生動很有臨場感。</p>
+    <hr/>
+    <p>若問我夢想唯一有點遺憾的是，我似乎沒有勇氣製造夢想，因為實踐夢想需要勇氣，</p>
+    <p>但到了這個年紀似乎又開始想做夢希望若時間能從來我想當個不露出臉，聲音卻可帶動戲劇的配音員。</p>
+    <p>或許偶爾被工作壓垮時是這樣做做夢讓我覺得人生很完美！</p>
 </div>
 <div>
 </div>
