add special effect on tang-gouba and modify agnes' intro

--- a/lin-gouzha-profiles/index.html
+++ b/lin-gouzha-profiles/index.html
@@ -228,7 +228,7 @@
     
   </div>
   
-  <p>宇棠目前就讀於國立台南藝術大學音樂系大四&gt;///&#060;</p>
+  <p>宇棠目前就讀於國立台南藝術大學音樂系大三升大四&gt;///&#060;</p>
   <p>主修打擊樂</p>
   <p>是乂煞氣a豬豬乂的表妹&gt;///&#060;</p>
   <p>喜歡打傳說~~還滿猛的</p>
