add some lib to respnsonding the size of window

--- a/tang-gouba-profile/index.html
+++ b/tang-gouba-profile/index.html
@@ -1,12 +1,16 @@
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/index.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>        
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <canvas id="canvas"></canvas>
-        <img id="heart0" src="pics/heart_0.png">
+        <img id="heart0" src="pics/heart_0.png" style="display: none;">
         <img id="heart1" src="pics/heart_1.png" style="display: none;">
         <img id="heart2" src="pics/heart_2.png" style="display: none;">
         <img id="heart3" src="pics/heart_3.png" style="display: none;">
