add mili's profile and remove special effects an eileen's and agnes' page

--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
                 <a href="./wang-wangwang-profile/index.html" class="custom-card">
                     <div class="card text-white bg-info mb-3" style="width: 20rem; display: inline-block">
                         <div class="card-body">
-                            <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>            
-                            <h3 class="card-title">王汪汪</h3>
+                            <!-- <i class="fa fa-user-circle fa-5x" aria-hidden="true"></i>             -->
+                            <img src="pics/mili_thumbnail.jpg" alt="Mili">
+                            <h3 class="card-title">乂Mili乂</h3>
                             <span class="angle-right-icon"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-                            <p class="card-text">王汪汪是一隻白色的小狗</p>
+                            <p class="card-text">Mili是0死角美女&#128269;</p>
                         </div>
                     </div>
                 </a>
