--- a/lin-gouzha-profiles/index.html
+++ b/lin-gouzha-profiles/index.html
@@ -185,7 +185,7 @@
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <canvas id="canvas"></canvas>
+  <!-- <canvas id="canvas"></canvas>
         <img id="heart0" src="pics/heart_0.png" style="display: none;">
         <img id="heart1" src="pics/heart_1.png" style="display: none;">
         <img id="heart2" src="pics/heart_2.png" style="display: none;">
@@ -211,10 +211,10 @@
         <img id="heart22" src="pics/heart_22.png" style="display: none;">
         <img id="heart23" src="pics/heart_23.png" style="display: none;">
         <img id="heart24" src="pics/heart_24.png" style="display: none;">
-        <img id="heart25" src="pics/heart_25.png" style="display: none;">
+        <img id="heart25" src="pics/heart_25.png" style="display: none;"> -->
 </head>
 <body>
-  <script>
+  <!-- <script>
     var canvas = document.getElementById('canvas'),
     context = canvas.getContext('2d');
     canvas.width  = document.body.clientWidth;//window.innerWidth;//getWidth();
@@ -256,7 +256,7 @@
     function getRandom(x){
         return Math.floor(Math.random()*x)+1;
     };
-  </script>
+  </script> -->
 
 <div class="container">
     <h2>乂宇棠乂</h2>
