--- a/lin-or-profiles/index.html
+++ b/lin-or-profiles/index.html
@@ -10,7 +10,7 @@
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <canvas id="canvas"></canvas>
+  <!-- <canvas id="canvas"></canvas>
         <img id="heart0" src="pics/heart_0.png" style="display: none;">
         <img id="heart1" src="pics/heart_1.png" style="display: none;">
         <img id="heart2" src="pics/heart_2.png" style="display: none;">
@@ -36,10 +36,10 @@
         <img id="heart22" src="pics/heart_22.png" style="display: none;">
         <img id="heart23" src="pics/heart_23.png" style="display: none;">
         <img id="heart24" src="pics/heart_24.png" style="display: none;">
-        <img id="heart25" src="pics/heart_25.png" style="display: none;">
+        <img id="heart25" src="pics/heart_25.png" style="display: none;"> -->
 </head>
 <body>
-  <script>
+  <!-- <script>
     var canvas = document.getElementById('canvas'),
     context = canvas.getContext('2d');
     canvas.width  = document.body.clientWidth;//window.innerWidth;//getWidth();
@@ -72,16 +72,30 @@
             image = document.getElementById("heart" + ((j - 1 + (i - 1) * 5) + 1).toString());
         }
         context.drawImage(image, x, y, w, h);
-    }
+    } -->
 
-    $("canvas").fadeOut(20000);
+    <!-- // $("canvas").fadeOut(20000);
+    // $("canvas").load(function(){
+    //   $(this).stop().animate(draw(),20000)
+    // }).ready()
+    //   });
+
+    // setTimeout(function(){
+      
+    // },5000); 
+
+//     $('.box').mouseenter(function(){
+//   $(this).stop().animate({ backgroundColor: "red" }, 1000);
+// }).mouseleave(function(){
+//     $(this).stop().animate({ backgroundColor: "blue" }, 1000);
+// });
     
-    window.addEventListener("DOMContentLoaded",draw(),true);
+  //   window.addEventListener("DOMContentLoaded",draw(),true);
 
-    function getRandom(x){
-        return Math.floor(Math.random()*x)+1;
-    };
-  </script>
+  //   function getRandom(x){
+  //       return Math.floor(Math.random()*x)+1;
+  //   };
+  // </script> -->
 
 <div class="container">
   <i class="fa fa-heart fa-3x" aria-hidden="true"></i><i class="fa fa-heart fa-3x" aria-hidden="true"></i><i class="fa fa-heart fa-3x" aria-hidden="true"></i>
