--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <li><a href="./add-friend/index.html"><i class="fa fa-user-plus fa-2x" aria-hidden="true"></i></a></li>&nbsp;
                             <li><a href="./score/index.html"><i class="fa fa-star-o fa-2x" aria-hidden="true"></i></a></li>&nbsp;
                             <li><a href="./save-pic/index.html"><i class="fa fa-camera fa-2x" aria-hidden="true"></i></a></li>&nbsp;&nbsp;
-                            <li><a href="./leave-msg/index.html"><i class="fa fa-commenting fa-2x" aria-hidden="true"></i></a></li>
+                            <li><a href="./leave-msg/index.html"><i class="fa fa-magic fa-2x" aria-hidden="true"></i><span class="badge badge-danger">new</span></a></li>
                         </ul>
                     </div>
                 </div>
