adjust size and ratio

--- a/page-flip/index.html
+++ b/page-flip/index.html
@@ -45,8 +45,8 @@
     <script>
         $(function() {
             $('#mybook').booklet({
-                width:  280,
-                height: 200,
+                width:  '100%',
+                height: 600,
                 auto: true,
                 play: '#play',
                 pause: '#pause'
