--- a/page-flip/index.html
+++ b/page-flip/index.html
@@ -25,6 +25,12 @@
             <img id="book" src="pics/book3.png">
         </div>
         <div>
+            <img id="book" src="pics/book5.png">
+        </div>
+        <div>
+            <img id="book" src="pics/book6.png">
+        </div>
+        <div>
             <img id="book" src="pics/book4.png">
         </div>
     </div>
